--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "framer-motion": "^5.3.0",
     "next": "12.0.3",
     "next-translate": "^1.2.0",
     "react": "17.0.2",
