--- a/package.json
+++ b/package.json
@@ -5,10 +5,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "cross-env ANALYZE=true next build",
+    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
+    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^12.0.4",
     "classnames": "^2.3.1",
+    "cross-env": "^7.0.3",
     "framer-motion": "^5.3.0",
     "next": "12.0.3",
     "next-translate": "^1.2.0",
