--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "framer-motion": "^5.3.0",
-    "next": "12.0.3",
+    "next": "^12.0.7",
     "next-translate": "^1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
