--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^12.0.4",
+    "@types/nodemailer": "^6.4.4",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "framer-motion": "^5.3.0",
     "next": "^12.0.7",
     "next-translate": "^1.2.0",
+    "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
